# multi-agent-ros

./: .gitignore  .gitmodules  Makefile  README.md  format_all.sh  pyproject.toml
experiments/: play_rosbag.sh  qos_override.yaml
experiments/aerial_distributed/configs/: baseline_no_algorithms.py  baseline_trust_distributed.py
experiments/aerial_distributed/configs/baselines/: baseline_scene_0.py
experiments/aerial_distributed/notebooks/: evaluate_multi_agent.ipynb  run_multi_agent.py  view_actor_layout.ipynb
experiments/cte_experiments/: analysis_utils.py  run_benign.sh  run_everything.sh  run_trust_as_hook_on_mc_cases.py  test_load_trust.py  write_carla_dataset.py  write_carla_dataset_mc.py  write_cte_baselines.sh  write_cte_mc.sh
experiments/cte_experiments/configs/: baseline_trust.py  baseline_trust_a0_prior.py
experiments/cte_experiments/configs/baselines/: baseline_scene_1.py  baseline_scene_2.py
experiments/cte_experiments/configs/cte_cases/: case_0_attacked.py  case_1_attacked.py  case_2_attacked.py  (+1 more)
experiments/ground_centralized/: analyze_tune_neg_bias.ipynb  cfg_utils.py  run_cte_trust_tuning.sh  write_cte_cases.sh
experiments/ground_centralized/configs/: baseline_adversary_passthrough.py  baseline_algorithms.py  baseline_no_algorithms.py  baseline_trust.py  baseline_trust_a0_prior.py
experiments/ground_centralized/notebooks/: make_adversarial_example_figures.ipynb  make_case_study_metric_figures.ipynb  make_case_study_visualizations.ipynb  make_example_psm_figures.ipynb  make_fov_figures.ipynb  make_test_metrics_figures.ipynb  make_trust_distribution_figures.ipynb  test_perception.ipynb  test_tracking.ipynb
experiments/notebooks_common/: make_trust_distribution_propagations.ipynb  test_perception.ipynb
hooks/: pre-commit
mar/: CMakeLists.txt  package.xml
mar_adv/: package.xml  setup.cfg  setup.py
mar_adv/mar_adv/: adversary.py  coordinator.py  selection.py
mar_agents/: package.xml  setup.cfg  setup.py
mar_agents/config/_base_/: base_agent.py  base_command_center.py  base_object.py  base_pipeline.py  base_world.py
mar_agents/config/agent/: untrusted_mobile_agent.py  untrusted_static_agent.py
mar_agents/config/command_center/: point_based_ci_fusion.py  point_based_ci_fusion_trust.py
mar_agents/config/pipeline/: command_center.py  passive_agent.py  passive_agent_pipeline.py
mar_agents/config/scenarios/: a0_no_trust_model.py
mar_agents/mar_agents/: __init__.py  agent.py  agent_passive.py  base.py  command_center.py  command_center_broker.py  pipeline.py  wrappers.py
mar_algs/: package.xml  setup.cfg  setup.py
mar_algs/mar_algs/: __init__.py  pipeline.py  wrappers.py
mar_bringup/: CMakeLists.txt  package.xml
mar_bringup/config/adversary/: adversary.yml  coordinator.yml
mar_bringup/config/agent/: mobile.yaml  static.yaml
mar_bringup/config/cameras/north-building-four-cameras/camera-1/: calibration.yaml  parameters.yaml  serial.txt
mar_bringup/config/cameras/north-building-four-cameras/camera-2/: calibration.yaml  serial.txt
mar_bringup/config/cameras/north-building-four-cameras/camera-3/: calibration.yaml  serial.txt
mar_bringup/config/cameras/north-building-four-cameras/camera-4/: calibration.yaml  serial.txt
mar_bringup/config/command_center/: cc_broker_standard.yml  cc_standard.yml
mar_bringup/config/simulator/: carla_point_simulator.yml
mar_bringup/config/visualizer/: agent0_config.rviz  agent1_config.rviz  agent2_config.rviz  agent3_config.rviz  agent_colors.txt  make_per_agent_viz_config.py  multi_agent_config.rviz  rviz_configuration.rviz  visualizer.yml
mar_bringup/launch/: _vehiclesec_base.launch.py  agent_passive.launch.py  all_agents.launch.py  benign.launch.py  carla_point_simulator.launch.py  carla_replay.launch.py  command_center.launch.py  flir_multicam.launch.py  flir_singlecam.launch.py  rviz.launch.py  single_agent.launch.py  test_launch_carla.launch.py  utils.py  vehiclesec.launch.py  vehiclesec_attack.launch.py  vehiclesec_benign.launch.py  vehiclesec_infra.launch.py  visualizer.launch.py
mar_bringup/launch/OLD/: _base.launch.py  attack.launch.py  base_multiagent.launch.py  utils.py
mar_bringup/launch/carla_trust_experiments/: cte_all_adversaries.launch.py  cte_all_agents.launch.py  cte_everything.launch.py  cte_metrics.launch.py  cte_single_agent.launch.py  cte_trust.launch.py  cte_visualizers.launch.py  utils.py
mar_bringup/launch/carla_trust_experiments/nodes/: cte_adversary.launch.py  cte_agent_passive.launch.py  cte_command_center.launch.py  cte_metrics_evaluator.launch.py  cte_metrics_visualizer.launch.py  cte_rviz.launch.py  cte_trust.launch.py  cte_trust_estimator.launch.py  cte_trust_viz.launch.py
mar_bringup/launch/nodes/: adversary.launch.py  adversary_coordinator.launch.py  agent_passive.launch.py  carla_point_simulator.launch.py  command_center.launch.py  visualizer.launch.py
mar_carla_sim/: package.xml  setup.cfg  setup.py
mar_carla_sim/mar_carla_sim/: loaders.py  nodes.py
mar_carla_sim/mar_carla_sim/point_simulator/: loaders.py  nodes.py
mar_description/: CMakeLists.txt  package.xml
mar_drivers/: CMakeLists.txt  package.xml
mar_drivers/launch/: flir_multicam_driver_node.launch.py  flir_singlecam_driver_node.launch.py
mar_msgs/: CMakeLists.txt  package.xml
mar_msgs/msg/: AgentDiscovery.msg  ObjectState.msg  ObjectStateArray.msg  ObjectStateStamped.msg
mar_msgs/srv/: AttackObjective.srv  SpawnAgent.srv
mar_traffic_sim/: package.xml  setup.cfg  setup.py
mar_viz/: package.xml  rviz_configuration.rviz  setup.cfg  setup.py
mar_viz/mar_viz/: nodes.py  rqt.py
notebooks/: make_adversarial_example_figures.ipynb  make_case_study_metric_figures.ipynb  make_case_study_visualizations.ipynb  make_example_psm_figures.ipynb  make_test_metrics_figures.ipynb  make_trust_distribution_figures.ipynb
postprocessing/: test.py
postprocessing/notebooks/: make_results_table.ipynb  visualize_results.ipynb
postprocessing/notebooks/.ipynb_checkpoints/: visualize_results-checkpoint.ipynb
rosbag_playback/: make_rosbag.sh  play_rosbag.sh  qos_override.yaml
(+13 files in other folders)
