[tool.poetry]
name = "multi_agent_ros"
version = "0.1.0-alpha.1"
description = "Multi-agent ROS experiments"
authors = ["Spencer Hallyburton <spencer@shally.dev>"]
readme = "README.md"
license = "MIT License"
repository = "https://github.com/cpsl-research/multi-agent-ros.git"
keywords = ["computer vision", "perception", "tracking", "replay"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
]

[tool.poetry.dependencies]
python = "~3.10"
flirtools = {path="./submodules/flirtools", develop=true}
opencv-python = ">4.7, <4.9.0.80"
ros2_numpy = "=0.0.2"

# AVSTACK PACKAGES
lib-avstack-api = {path="./submodules/lib-avstack-api", develop=true}
lib-avstack-core = {path="./submodules/lib-avstack-core", extras=["percep"], develop=true}
lib-avstack-security = {path="./submodules/lib-avstack-security", develop=true}
lib-avstack-trust = {path="./submodules/lib-avstack-trust", develop=true}

# AVSTACK ROS BRIDGES
avstack_bridge = {path="./submodules/avstack-rosbridge/avstack_bridge/", extras=[], develop=true}
avsec_bridge = {path="./submodules/avstack-security-rosbridge/avsec_bridge/", extras=[], develop=true}
avtrust_bridge = {path="./submodules/avstack-trust-rosbridge/avtrust_bridge/", extras=[], develop=true}

[tool.poetry.group.test.dependencies]
snakeviz="^2.1.1"
pytest = "^7"
pytest-cov = "^4"
bandit = "^1.7"
black = {extras = ["jupyter"], version = "~22.12.0"}
mypy = "^0"
isort = "^5.11"
flake8 = "^5.0"
autoflake = "^1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -s"
testpaths = [
    "tests",
    "integration",
]

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
