<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mar_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="spencer.hallyburton@duke.edu">spencer</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>mar_agents</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>

  <exec_depend>percep_lidar</exec_depend>
  <exec_depend>percep_camera</exec_depend>
  <exec_depend>fov_estimator</exec_depend>
  <exec_depend>tracking</exec_depend>
  <exec_depend>trust</exec_depend>
  <exec_depend>viz_camera</exec_depend>
  <exec_depend>plotjuggler</exec_depend>

  <exec_depend>avstack_msgs</exec_depend>
  <exec_depend>avstack_msgs_rviz_plugins</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
